--- a/translations/ja/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/ja/LC_MESSAGES/wesnoth-ala.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2024-10-25 01:31 UTC\n"
-"PO-Revision-Date: 2024-01-16 10:53+0900\n"
+"PO-Revision-Date: 2024-10-27 03:27+0900\n"
 "Last-Translator: konami,k <konamit2008@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 3.4.2\n"
+"X-Generator: Poedit 3.5\n"
 
 #. [campaign]: id=A_little_Adventure
 #. Strings from utils/ALA_Deaths.cfg used to get put in the potfile
@@ -674,10 +674,8 @@ msgstr ""
 
 #. [message]: speaker=Divaid
 #: A_Little_Adventure/scenarios/04_The_Bloody_Hills.cfg:394
-#, fuzzy
-#| msgid "Don't you dare to touch my friend Ranfy, tattooed midget!"
 msgid "Don't you dare try to touch my friend Ranfy, you tattooed midget!"
-msgstr "俺の友達の Ranfy に触るんじゃねえよ、刺青の小人め！"
+msgstr "俺の友達の Ranfy に触るんじゃねえよ、この刺青の小人め！"
 
 #. [message]: speaker=unit
 #: A_Little_Adventure/scenarios/04_The_Bloody_Hills.cfg:406
@@ -1654,11 +1652,6 @@ msgstr ""
 #. [message]: speaker=Glauco
 #. a "corvée" is when laborers do unpaid work for one specific task:
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:262
-#, fuzzy
-#| msgid ""
-#| "You've got that right, Geobard, this plain is completely bare; but look "
-#| "to the forest to our right! Organize a corvee that takes logs from it to "
-#| "build a fence here."
 msgid ""
 "You've got that right, Geobard, this plain is completely bare; but look to "
 "the forest to our right! Organize a corvée that takes logs from it to build "
@@ -2178,19 +2171,14 @@ msgstr ""
 
 #. [message]: speaker=Glauco
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:522
-#, fuzzy
-#| msgid ""
-#| "My name is Glauco! I'm the commander of the Amoran's garrison, and I'm "
-#| "trying to reach the nereid's bay at the mouth of the Amber River! And who "
-#| "would you be? I thought all the dwarves had left these hills."
 msgid ""
 "My name is Glauco! I'm the commander of the Amoran's garrison, and I'm "
 "trying to reach the nereids' bay at the mouth of the Amber River! And who "
 "would you be? I thought all the dwarves had left these hills."
 msgstr ""
 "私の名前は Glauco だ！ Amoran の守備隊の司令官だが、琥珀川の河口にある "
-"nereid の湾へ行こうとしているところだ！それで、君は誰だ？ドワーフは全員この丘"
-"から立ち去ったと思っていたが。"
+"nereids の湾へ行こうとしているところだ！それで、君は誰だ？ドワーフは全員この"
+"丘から立ち去ったと思っていたが。"
 
 #. [message]: speaker=Mimord
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:526
@@ -2240,12 +2228,6 @@ msgstr "本音を言うと... なるべくトラブルは避けたい。"
 #. [message]: speaker=Mimord
 #. "By my sister's mustache" is another humorous dwarvish idiom meant to signify the swearing of an oath:
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:544
-#, fuzzy
-#| msgid ""
-#| "By my sister's moustache, that is a truly ridiculous statement, commander "
-#| "Glauco, from the mouth of someone who wants to cross these territories! "
-#| "Do you know what I tell you? You have won, I'll come with you for free; I "
-#| "am bored to death here."
 msgid ""
 "By my sister's mustache, that is a truly ridiculous statement, commander "
 "Glauco, from the mouth of someone who wants to cross these territories! Do "
@@ -2937,10 +2919,8 @@ msgstr "薄明"
 
 #. [damage]: id=tail_stun
 #: A_Little_Adventure/utils/ALA_specials.cfg:8
-#, fuzzy
-#| msgid "tail"
 msgid "tail stun"
-msgstr "尾びれ"
+msgstr "尾びれ攻撃"
 
 #. [damage]: id=tail_stun
 #. the "stun" ability is also in some mainline campaigns, I think; try to keep the translation string similar:
@@ -3196,19 +3176,6 @@ msgstr ""
 
 #. TODO: check "sergeant" usage:
 #: A_Little_Adventure/utils/ALA_story.cfg:57
-#, fuzzy
-#| msgid ""
-#| "With Dadoc's gang out of the games, and emboldened by the victory "
-#| "obtained and by his new commander prerogatives, Glauco decided to face at "
-#| "least one of others Amoran's problems, that's to say Grunto the orc; as "
-#| "Grunto was not a member of the tribes associated with the Northern "
-#| "Alliance, it would be unlikely that other orcish chiefs would help him, "
-#| "especially now that he had already been defeated in the previous battle, "
-#| "and therefore he saw his reputation finish, as it's called among the "
-#| "orcs, in a troll latrine. However, emboldening had not meant that he had "
-#| "become stupid, for the young sergeant. A campaign in hostile territory, "
-#| "against forces with only partly-known numbers, was, however, risky and "
-#| "full of unknowns."
 msgid ""
 "With Dadoc's gang out of the games, and emboldened by the victory he had "
 "obtained, and by his new prerogatives as commander, Glauco decided to face "
@@ -3224,11 +3191,11 @@ msgstr ""
 "Dadoc 一団が戦線を離脱して、勝利と指揮官としての新たな特権を得た Glauco は、"
 "少なくとも Amoran の他の問題の一つ、すなわちオークの Grunto と対決することを"
 "決意しました。Grunto は北部同盟の部族ではないため、オークの他の首領が彼を助け"
-"ることはないでしょう。特に前の戦いで既に敗戦していたので、評判が落ちたことが"
-"分かったのです。オークの間で言われているように、トロルの便所で。しかし、若い"
-"軍曹にとって、大胆になることは愚かになるという意味ではありません。しかし、敵"
-"地での作戦は、兵数が一部しか分からない軍隊との戦いであって、危険で不確実な要"
-"素ばかりでした。"
+"ることはないでしょう。特に前の戦いで既に敗戦していたので、評判が地に落ちたこ"
+"とが分かったのです。オークの間で言われているように、トロルの便所で。しかし、"
+"若い軍曹にとって、大胆になることは愚かになるという意味ではありません。しか"
+"し、敵地での作戦は、兵数が一部しか分からない軍隊との戦いであって、危険で不確"
+"実な要素ばかりでした。"
 
 #: A_Little_Adventure/utils/ALA_story.cfg:61
 msgid ""
